tests/snapshots/output/erroneous_end_tag.snap
---
source: tests/snapshots/html.rs
description: "<div><foo>Some text</bar></div>\n"
---
<div>
    <foo>Some text
    </bar>
</div>
