tests/snapshots/output/erroneous_end_tag_inline.snap
---
source: tests/snapshots/diagnostics.rs
description: "<div><foo>Some text</bar></div>\n"
---
<div>
    <foo>
    Some text
    </bar>
</div>
