tests/snapshots/output/erroneous_end_tag_multiline.snap
---
source: tests/snapshots/diagnostics.rs
description: "<div>\n    <foo>\n        Some text\n    </bar>\n</div>\n"
---
<div>
    <foo>
    Some text
    </bar>
</div>
