tests/snapshots/output/filter.snap
---
source: tests/snapshots/askama.rs
description: "{% filter lower|capitalize %} {{ t }} / HELLO / {{ u }} {% endfilter %}\n"
---
{% filter lower|capitalize %} {{ t }} / HELLO / {{ u }} {% endfilter %}
