tests/snapshots/output/for_list.snap
---
source: tests/snapshots/mixed.rs
description: "<h1>Users</h1><ul>{% for user in users %}<li>{{ user.name }}</li>{% endfor %}</ul>\n"
---
<h1>Users</h1>
<ul>
    {% for user in users %}
        <li>{{ user.name }}</li>
    {% endfor %}
</ul>
