tests/snapshots/output/greet.snap
---
source: tests/snapshots/axum_app.rs
description: "{% extends \"_layout.html\" %}\n{%- block title -%}\n{%- match lang -%}\n{%- when Lang::en -%} Hello, {{name}}!\n{%- when Lang::de -%} Hallo, {{name}}!\n{%- when Lang::fr -%} Bonjour, {{name}}!\n{%- endmatch -%}\n{%- endblock -%}\n{%- block content -%}\n<h1>\n{%- match lang -%}\n{%- when Lang::en -%} Hello!\n{%- when Lang::de -%} Hallo!\n{%- when Lang::fr -%} Bonjour!\n{%- endmatch -%}\n</h1>\n<p>\n{%- match lang -%}\n{%- when Lang::en -%}\nHello, <strong>{{name}}</strong>, nice to meet you! {#-~#}\nI'm a <a href=\"https://askama.readthedocs.io/\">Askama</a> example application.\n{%- when Lang::de -%}\nHallo, <strong>{{name}}</strong>, schön dich kennenzulernen! {#-~#}\nIch bin eine <a href=\"https://askama.readthedocs.io/\">Askama</a>-Beispielanwendung.\n{%- when Lang::fr -%}\nBonjour, <strong>{{name}}</strong>, ravi de vous rencontrer ! {#-~#}\nJe suis une application d'exemple de <a href=\"https://askama.readthedocs.io/\">Askama</a>.\n{%- endmatch -%}\n</p>\n<h2>\n<a href=\"/{{ lang }}/index.html?name={{ name | urlencode }}\">\n{%- match lang -%}\n{%- when Lang::en -%} Back to the first page.\n{%- when Lang::de -%} Zurück zur ersten Seite.\n{%- when Lang::fr -%} Retour à la première page.\n{%- endmatch -%}\n</a>\n</h2>\n{%- call lang_select(\"greet-me\", name|urlencode|fmt(\"?name={}\")) -%}{%- endcall -%}\n{%- endblock -%}\n"
---
{% extends "_layout.html" %}
{%- block title -%}
    {%- match lang -%}
        {%- when Lang::en -%} Hello, {{ name }}!
        {%- when Lang::de -%} Hallo, {{ name }}!
        {%- when Lang::fr -%} Bonjour, {{ name }}!
    {%- endmatch -%}
{%- endblock -%}
{%- block content -%}
    <h1>
        {%- match lang -%}
            {%- when Lang::en -%} Hello!
            {%- when Lang::de -%} Hallo!
            {%- when Lang::fr -%} Bonjour!
        {%- endmatch -%}
    </h1>
    <p>
        {%- match lang -%}
            {%- when Lang::en -%}
                Hello, <strong>{{ name }}</strong>, nice to meet you!
                {#-~#}
                I'm a <a href="https://askama.readthedocs.io/">Askama</a> example application.
            {%- when Lang::de -%}
                Hallo, <strong>{{ name }}</strong>, schön dich kennenzulernen!
                {#-~#}
                Ich bin eine <a href="https://askama.readthedocs.io/">Askama</a>-Beispielanwendung.
            {%- when Lang::fr -%}
                Bonjour, <strong>{{ name }}</strong>, ravi de vous rencontrer !
                {#-~#}
                Je suis une application d'exemple de <a href="https://askama.readthedocs.io/">Askama</a>.
        {%- endmatch -%}
    </p>
    <h2>
        <a href="/{{ lang }}/index.html?name={{ name | urlencode }}">
            {%- match lang -%}
                {%- when Lang::en -%} Back to the first page.
                {%- when Lang::de -%} Zurück zur ersten Seite.
                {%- when Lang::fr -%} Retour à la première page.
            {%- endmatch -%}
        </a>
    </h2>
    {%- call lang_select("greet-me", name|urlencode|fmt("?name={}")) -%}
    {%- endcall -%}
{%- endblock -%}
