tests/snapshots/output/head.snap
---
source: tests/snapshots/mixed.rs
description: "{% block head %}\n<style>\n.user {\n  color: blue;\n  margin-bottom: 5px;\n}\n</style>\n<script>\nfunction showCount(count) {\n  console.log(\"We have \" + count + \" users.\");\n}\ndocument.addEventListener(\"DOMContentLoaded\", () => {\n  showCount({{ users | length }});\n});\n</script>\n{% endblock %}\n"
---
{% block head %}
    <style>
        .user {
          color: blue;
          margin-bottom: 5px;
        }
    </style>
    <script>
        function showCount(count) {
          console.log("We have " + count + " users.");
        }
        document.addEventListener("DOMContentLoaded", () => {
          showCount({{ users | length }});
        });
    </script>
{% endblock %}
